k8s/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui
  namespace: app-vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelines-vote-ui
  template:
    metadata:
      labels:
        app: pipelines-vote-ui
    spec:
      containers:
        - image: quay.io/rh-ee-afonseca/vote-ui:latest
          imagePullPolicy: Always
          name: pipelines-vote-ui
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
