k8s/ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui
  namespace: app-vote
spec:
  port:
    targetPort: 8080-tcp
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge    
  to:
    kind: Service
    name: pipelines-vote-ui
    weight: 100
